highlight support center

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -18,8 +18,10 @@
   </p>
   <p>Hi, and thank you for purchasing Accordion Slider!</p>
   <p>
-    The plugin's admin interface contains inline information, which most of the time should be sufficient for understanding how to use the plugin. However, many details are not covered there, but you can find them covered in this guide. If you have a question or technical problem that is not covered by this guide, please use
-    <a href="http://support.bqworks.com/home">the official bqworks Support Center</a>
+    The plugin's admin interface contains inline information, which most of the time should be sufficient for understanding how to use the plugin. However, many details are not covered there, but you can find them covered in this guide.
+  </p>
+  <p class="note">If you have a question or technical problem that is not covered by this guide, please contact us through the
+    <a href="http://support.bqworks.com/home"><u>Support Center</u></a>
     .
   </p>
 
