edit gallery panels description in the docs

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -304,6 +304,7 @@
   </p>
   <a href="assets/images/add-gallery-panels.png">
     <img src="assets/images/add-gallery-panels.png"></a>
+    <p>You just need to drop the accordion slider shortcode in a post that contains a <i>[gallery]</i> shortcode, and the images from the <i>[gallery]</i> will automatically be loaded in the accordion. Then, if you want to hide the original gallery, you can add the <i>hide</i> attribute to the <i>[gallery]</i> shortcode: <i>[gallery ids="1,2,3" hide="true"]</i>.</p>
   <p>
     This is the complete list of dynamic tags for Gallery panels:
   </p>
