--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Accordion Slider - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 1.0.0</strong></em> 
+  <p> <em><strong>Version 1.0.1</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Accordion Slider!</p>
   <p>
@@ -1765,6 +1765,10 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   <strong>v. 1.0.0</strong>
   <ul>
     <li>initial release</li>
+  </ul>
+  <strong>v. 1.0.1</strong>
+  <ul>
+    <li>fix: disable lightbox when the accordion is swiped</li>
   </ul>
 
   <div class="main-menu">
