update change log in docs

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1762,13 +1762,17 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
-  <strong>v. 1.0.0</strong>
+  <p><strong>v. 1.0.2</strong> (9 April 14)</p>
   <ul>
-    <li>initial release</li>
+    <li>fix: show missing stylesheets warning even if accordion is cached</li>
   </ul>
-  <strong>v. 1.0.1</strong>
+  <p><strong>v. 1.0.1</strong> (6 April 14)</p>
   <ul>
     <li>fix: disable lightbox when the accordion is swiped</li>
+  </ul>
+  <p><strong>v. 1.0.0</strong> (3 April 14)</p>
+  <ul>
+    <li>initial release</li>
   </ul>
 
   <div class="main-menu">
