update docs change log

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1762,6 +1762,10 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
+  <p><strong>v. 1.0.3</strong> (10 April 14)</p>
+  <ul>
+    <li>add compatibility with older jQuery versions</li>
+  </ul>
   <p><strong>v. 1.0.2</strong> (8 April 14)</p>
   <ul>
     <li>fix: show missing stylesheets warning even if accordion is cached</li>
