update docs changelog

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Accordion Slider - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 1.0.3</strong></em> 
+  <p> <em><strong>Version 1.0.4</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Accordion Slider!</p>
   <p>
@@ -1762,6 +1762,14 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
+  <p><strong>v. 1.0.4</strong> (17 April 14)</p>
+  <ul>
+    <li>add inner shortcode support</li>
+    <li>correct shortcode elements names in documentation</li>
+    <li>reset post data transient every time the accordion's admin page is refreshed</li>
+    <li>fix shortcode parsing when width and height are not specified</li>
+    <li>fix shortcode parsing when layer settings are not specified</li>
+  </ul>
   <p><strong>v. 1.0.3</strong> (10 April 14)</p>
   <ul>
     <li>add compatibility with older jQuery versions</li>
