--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -31,28 +31,28 @@
   </p>
   <ul class="video-tutorials-list">
     <li>
-      <a href="https://www.youtube.com/watch?v=epe7kU_CQaM" target="_blank">1. Installing the plugin</a>
+      <a href="https://www.youtube.com/watch?v=epe7kU_CQaM&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">1. Installing the plugin</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=qmjgtmeLrzs" target="_blank">2. Create and publish accordions</a>
+      <a href="https://www.youtube.com/watch?v=qmjgtmeLrzs&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">2. Create and publish accordions</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=sGToyxSDZLk" target="_blank">3. Create accordions from posts</a>
+      <a href="https://www.youtube.com/watch?v=sGToyxSDZLk&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">3. Create accordions from posts</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=oF3tRiuJq_k" target="_blank">4. Create accordions from galleries</a>
+      <a href="https://www.youtube.com/watch?v=oF3tRiuJq_k&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">4. Create accordions from galleries</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=-6X1FAbJyYw" target="_blank">5. Working with layers</a>
+      <a href="https://www.youtube.com/watch?v=-6X1FAbJyYw&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">5. Working with layers</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=kqU0FxrN6L4" target="_blank">6. Adding custom CSS</a>
+      <a href="https://www.youtube.com/watch?v=kqU0FxrN6L4&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">6. Adding custom CSS</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=AatLP0QGYv8" target="_blank">7. Working with breakpoints</a>
+      <a href="https://www.youtube.com/watch?v=AatLP0QGYv8&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">7. Working with breakpoints</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=UVk_2r3f1xc" target="_blank">8. Import and Export accordions</a>
+      <a href="https://www.youtube.com/watch?v=UVk_2r3f1xc&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">8. Import and Export accordions</a>
     </li>
   </ul>
 
