fix doc italics

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -79,7 +79,7 @@
     In order to find your purchase code, go to
     <a href="http://codecanyon.net/downloads/">http://codecanyon.net/downloads/</a>
     and find Accordion Slider in your list of purchases. Then, click on the
-    <i>Download button</i>
+    <i>Download</i> button
     and select
     <i>License certificate & purchase code</i>
     .
