updated version number and changelog

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Accordion Slider - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 1.0.4</strong></em> 
+  <p> <em><strong>Version 1.0.5</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Accordion Slider!</p>
   <p>
@@ -1762,6 +1762,14 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
+  <p><strong>v. 1.0.5</strong> (30 April 14)</p>
+  <ul>
+    <li>corrected default value for 'Start Panel' to -1</li>
+    <li>fixed background image swap when startPanel is used</li>
+    <li>added the 'as-closed' class by default when the accordion is initially closed</li>
+    <li>fixed the 'as-opened' class removal from the last opened panel</li>
+    <li>added 0 margin and padding to background images to prevent unwanted styling</li>
+  </ul>
   <p><strong>v. 1.0.4</strong> (17 April 14)</p>
   <ul>
     <li>add inner shortcode support</li>
